started to fix positioning for sprites. updated missing background image. reorganized audio ad image files into separate directories.

--- a/dragon.css
+++ b/dragon.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body {
     font-family: 'Press Start 2P', cursive;
-    background-image: url(https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/153612201_10223213166090209_687952016593341034_o.jpg?_nc_cat=103&ccb=3&_nc_sid=0debeb&_nc_ohc=jA4R4Y1oApkAX_SJYe3&_nc_ht=scontent-sea1-1.xx&oh=649540bbad930efe068306206c146ff7&oe=605AD0C8);
+    background-image: url('./images/fantasy-forest.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: black;
+    z-index: -10;
+    
 }
+
 h1 {
     text-align: center;
     font-size: 38px;
@@ -11,6 +17,7 @@ h1 {
     margin: 10px 0;
     -webkit-text-stroke: 1px black;
 }
+
 h3 {
     text-align: center;
     font-size: 22px;
@@ -21,14 +28,16 @@ h3 {
     margin: 10px 0;
     -webkit-text-stroke: 1px black;
 }
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 200px 400px 200px;
     justify-items: center;
 }
+
 #game {
-    background-image: url(https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/153612201_10223213166090209_687952016593341034_o.jpg?_nc_cat=103&ccb=3&_nc_sid=0debeb&_nc_ohc=jA4R4Y1oApkAX_SJYe3&_nc_ht=scontent-sea1-1.xx&oh=649540bbad930efe068306206c146ff7&oe=605AD0C8);
+    background-image: url();
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -36,6 +45,7 @@ h3 {
     height: 800px;
     border: 10px solid black;
 }
+
 #event {
     grid-column: span 2;
     justify-self: center;
@@ -54,6 +64,7 @@ h3 {
     background-color: black;
     color: red;
 }
+
 #knight-hp {
     color: white;
     font-size: 50px;
@@ -62,6 +73,7 @@ h3 {
     top: 50px;
     -webkit-text-stroke: 1px black;
 }
+
 #knight-hp-div {
     background-image: url(http://clipart-library.com/img/1578912.png);
     background-repeat: no-repeat;
@@ -71,6 +83,7 @@ h3 {
     height: 200px;
     opacity: 0.9;
 }
+
 #dragon-hp {
     color: white;
     text-align: center;
@@ -80,6 +93,7 @@ h3 {
     top: 50px;
     -webkit-text-stroke: 1px black;
 }
+
 #dragon-hp-div {
     background-image: url(http://clipart-library.com/img/1578912.png);
     background-repeat: no-repeat;
@@ -89,9 +103,11 @@ h3 {
     height: 200px;
     opacity: 0.9;
 }
+
 #knight-sprite-div {
     align-self: end;
 }
+
 #k-sprite {
     height: 50%;
     width: 50%;
@@ -101,9 +117,11 @@ h3 {
     left: 200px;
     z-index: 1;
 }
+
 #dragon-sprite {
     grid-column: span 2;
 }
+
 #drg-sprite {
     height: 130%;
     width: 130%;
@@ -111,15 +129,18 @@ h3 {
     right: 200px;
     z-index: 0;
 }
+
 #player-actions {
     grid-column: span 4;
 }
+
 .player-action {
     width: 125px;
     height: 125px;
     margin: 20px 40px 20px 40px;
     z-index: 1;
 }
+
 #sword {
     background-image: url(http://clipart-library.com/images_k/sword-transparent/sword-transparent-9.png);
     background-size: 90px;
@@ -131,6 +152,7 @@ h3 {
     position: relative;
     top: 10px;
 }
+
 #shield {
     background-image: url(http://clipart-library.com/img1/1514023.png);
     background-size: 90px;
@@ -142,6 +164,7 @@ h3 {
     position: relative;
     top: 10px;
 }
+
 #bow {
     background-image: url(http://clipart-library.com/image_gallery2/Archery-Free-Download-PNG.png);
     background-size: 90px;
@@ -157,6 +180,7 @@ h3 {
     position: relative;
     top: 25px;
 }
+
 #potion {
     background-image: url(http://clipart-library.com/images_k/potion-transparent/potion-transparent-3.png);
     background-size: 90px;
@@ -172,52 +196,58 @@ h3 {
     position: relative;
     top: 25px;
 }
+
 #action-sprites {
     align-self: end;
 }
+
 #fire-sprite {
-    width: 30%;
-    position: absolute;
-    bottom: 320px;
-    left: 330px;
+    width: 300px;
+    position: relative;
+    top: 700px;
+    left: 50px;
     z-index: -1;
 }
+
 #claws-sprite {
-    width: 10%;
+    width: 100px;
     opacity: 0.75;
     transform: scaleX(-1);
-    position: absolute;
-    bottom: 320px;
-    left: 215px;
+    position: relative;
+    top: 600px;
+    left: -70px;
     z-index: -1;
 }
 
 #bite-sprite {
-    width: 10%;
+    width: 125px;
     opacity: 0.75;
     transform: scaleX(-1);
-    position: absolute;
-    bottom: 345px;
-    left: 215px;
+    position: relative;
+    top: 575px;
+    right: 195px;
     z-index: -1;
 }
+
 #wind-sprite {
-    width: 23%;
+    width: 300px;
     transform: scaleX(-1);
     opacity: 0.5;
-    position: absolute;
-    bottom: 305px;
-    left: 775px;
+    position: relative;
+    left: 450px;
+    top: 200px;
     z-index: -1;
 }
+
 #sword-sprite {
-    width: 25%;
+    width: 400px;
     transform: scaleX(-1) rotate(60deg);
-    position: absolute;
-    bottom: 395px;
-    left: 625px;
+    position: relative;
+    left: 350px;
+    bottom: 75px;
     z-index: -1;
 }
+
 #arrow-sprite {
     width: 10%;
     transform: rotate(137deg);
@@ -226,6 +256,7 @@ h3 {
     left: 550px;
     z-index: -1;
 }
+
 #shield-sprite {
     width: 8%;
     position: absolute;
@@ -234,6 +265,7 @@ h3 {
     left: 270px;
     z-index: -1;
 }
+
 #potion-sprite {
     width: 20%;
     position: absolute;
@@ -243,6 +275,7 @@ h3 {
     left: 150px;
     z-index: -1;
 }
+
 #tombstone-k {
     width: 10%;
     position: absolute;
@@ -250,6 +283,7 @@ h3 {
     left: 225px;
     z-index: -1;
 }
+
 #tombstone-d {
     width: 10%;
     position: absolute;
@@ -257,6 +291,7 @@ h3 {
     right: 450px;
     z-index: -1;
 }
+
 #potion-text, #bow-text, #shield-text, #sword-text, #knight-text, #dead-dragon-text, #dead-knight-text {
     position: absolute;
     padding: 10px;
@@ -267,12 +302,14 @@ h3 {
     line-height: 15px;
     z-index: -1;
 }
+
 #potion-text {
     background-color: rgb(48, 181, 181);
     left: 30px;
     bottom: 175px;
     width: 155px;
 }
+
 #bow-text {
     color: white;
     background-color: rgb(58, 58, 130);
@@ -280,6 +317,7 @@ h3 {
     bottom: 275px;
     width: 175px;
 }
+
 #shield-text {
     color: goldenrod;
     background-color: black;
@@ -294,6 +332,7 @@ h3 {
     bottom: 175px;
     width: 145px;
 }
+
 #knight-text {
     color: black;
     background-color: white;
@@ -308,6 +347,7 @@ h3 {
     bottom: 350px;
     width: 100px;
 }
+
 #dead-dragon-text {
     color: black;
     background-color: white;
